@@ -40,6 +40,7 @@ Mapped Value
 Memcached Plugin
 Memcached Tool
 Movement
+Notification Tool
 Order Tool
 Password Tool
 Predicate
