@@ -1,3 +1,6 @@
+2011-01-13 nicolas.dumazet
+* add portal types for Tools bundled in erp5_core: Notification Tool was missing
+
 2010-12-28 nicolas.dumazet
 * add test_tales_expression field to Predicate_view
 
